Server connection with encryption